<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_pca9685</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="emircem.gezer@gmail.com">cem</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tf2</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros2_control</depend>
  <depend>rclcpp</depend>
  <depend>pybind11-dev</depend>
  <depend>python3-distutils</depend>
  <depend>python3-dev</depend>
  <depend>libi2c-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
